[package]
name = "rustminify"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tool for minifying Rust code."
repository = "https://github.com/qryxip/rustminify"
keywords = ["minifier", "minify"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
publish = false

[dependencies]
